<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/nav_bar_theme"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

  <ImageView
      android:layout_width="90dp"
      android:layout_height="90dp"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      android:contentDescription="@string/logo"/>

  <TextView
      android:id="@+id/textViewUsernameSide"
      android:textColor="@color/colorAccent"
      android:textStyle="bold"
      android:text="@string/username"
      android:padding="8dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

  <TextView
      android:id="@+id/textViewBalanceSide"
      android:textColor="@color/colorAccent"
      android:textStyle="bold"
      android:text="@string/balance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

</LinearLayout>