<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:scaleType="fitCenter"
        android:layout_margin="10dp"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:gravity="center"
        android:hint="@string/Version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewVersion"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_1"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:elevation="15dp">

      <TextView
          android:textColor="@color/colorAccent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewMassage"
          android:gravity="center"
          android:hint="@string/Version"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:hint="@string/username"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:drawableStart="@drawable/ic_person_outline"
          android:drawablePadding="15dp"
          android:background="@drawable/edit_text"
          android:drawableTint="@color/colorAccent"
          android:layout_margin="5dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPassword"
          android:hint="@string/password"
          android:drawablePadding="15dp"
          android:drawableStart="@drawable/ic_vpn_key"
          android:background="@drawable/edit_text"
          android:drawableTint="@color/colorAccent"
          android:layout_margin="5dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Button
          android:text="@string/login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonLogin"
          android:background="@drawable/button_1"
          android:textColor="@color/colorAccent"
          android:layout_margin="20dp"/>

    </LinearLayout>

    <Button
        android:text="@string/download_new_apk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonWebDownloadAPK"
        android:background="@drawable/button_2"
        android:layout_marginEnd="50dp"
        android:textColor="@color/textSecondary"
        android:elevation="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

  </LinearLayout>

</ScrollView>