<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_2"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginEnd="50dp">

      <TextView
          android:text="@string/username"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textColor="@color/textSecondary"
          android:layout_weight="0.5"
          android:id="@+id/textViewUsername"/>

      <TextView
          android:text="@string/example_doge"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"
          android:gravity="center"
          android:textColor="@color/textSecondary"
          android:layout_weight="1"
          android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textViewRemainingBalance"
        android:textColor="@color/textSecondary"
        android:background="@drawable/button_2"
        android:text="@string/balance"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="50dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_1"
        android:layout_margin="5dp"
        android:elevation="10dp">

      <org.eazegraph.lib.charts.ValueLineChart
          android:id="@+id/cubicLineChart"
          android:layout_width="match_parent"
          android:layout_height="300dp"
          app:egUseCubic="true"
          app:egUseOverlapFill="true"
          app:egCurveSmoothness="0.4"
          app:egLegendHeight="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_1"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

      <LinearLayout
          android:id="@+id/LinearLayoutContentPayIn"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1"/>

      <LinearLayout
          android:id="@+id/LinearLayoutContentPayOut"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1"/>

      <LinearLayout
          android:id="@+id/LinearLayoutContentProfit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>